Add responsive text to whole page; add borders to article images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <article>
                     <h2>Today is all about you!</h2>
                     <img src="images/black-natural-hair.webp" alt="">
-                    <p>Come on in! Walk-in's welcome!</p>
+                    <p>Schedule an appointment with us today! Don't have an appointment? Come on in! Walk-in's welcome!</p>
                 </article>
                 <article>
                     <h2>Color</h2>
